# MiptMLopsCourse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_server.sh
.dvc/: config
apartment_prices_prediction/: infer.py  train.py
configs/: base_config.yaml
data/: .gitignore  houses_train.csv  houses_train.csv.dvc  houses_val.csv  houses_val.csv.dvc
models/: model.cbm.dvc
triton_server/: client.py  docker-compose.yaml  requirements.txt
triton_server/model_repository/catboost/: config.pbtxt
triton_server/model_repository/catboost/1/: model.py
