[tool.poetry]
name = "apartment-prices-prediction"
version = "0.1.0"
description = ""
authors = ["Potyashin <potyashin.ivan@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.4"
pandas = "^2.0.0"
catboost = "^1.2.2"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
dvc = "^3.30.3"
dvc-gdrive = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
exclude = [".git", "__pycache__"]
max-complexity = 10
